--- a/triangle.html
+++ b/triangle.html
@@ -47,16 +47,32 @@
         return false;
     }
 
+    function checkIsValid(num){
+        if (isNaN(num)){
+            return false
+        }
+        if (num <= 0){
+            return false
+        }
+        return true
+    }
+
     clearButton.addEventListener('click', function(e){
         a.value = "";
         b.value = "";
         c.value = "";
+        ans.textContent = "";
     })
 
     calculateButton.addEventListener('click', function(e){
         let sideA = +a.value;
         let sideB = +b.value;
         let sideC = +c.value;
+
+        if (!checkIsValid(sideA) || !checkIsValid(sideB) || !checkIsValid(sideC)){
+            ans.textContent = 'Invalid Inputs';
+            return;
+        }
 
         if (checkIsTri(sideA, sideB, sideC)){
             ans.textContent = 'Yes, this makes a valid triangle'
