sixth commit, did 3.7 notes and your turn(avatarPicker)

--- a/avatarPicker.html
+++ b/avatarPicker.html
@@ -47,7 +47,7 @@
     });
 
     anime.addEventListener('click', function(e){
-        picture.src='https://www.pngitem.com/pimgs/m/192-1926160_transparent-ajax-png-anime-profile-png-download.png'
+        picture.src='https://static.zerochan.net/Ch%E2%80%99en.full.2754341.jpg'
     });
 
     dragon.addEventListener('click', function(e){
