--- a/insertPractice.html
+++ b/insertPractice.html
@@ -34,7 +34,7 @@
     //put this at the top in addition to existing elements
     const food = document.createElement('h1');
     food.innerHTML = 'I love Pasta';
-    content.insertAdjacentElement('afterend', food);
+    content.insertAdjacentElement('afterbegin', food);
 
     //to remove an element
     const unwantedElement = document.querySelector('h4');
