--- a/yourName.html
+++ b/yourName.html
@@ -4,23 +4,52 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .hidden{
+            display:none;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
     <div class="content">
         <div>
-            <label for="fname">First Name</label>
-            <input type="text" id="fname" name="fname" style="width: 150px;">
+            <label for="first">First Name</label>
+            <input type="text" id="first" name="first_name" style="width: 150px;">
         </div>
         <div>
-            <label for="lname">Last name</label>
-            <input type="text" id="lname" name="lname" style="width: 150px;">
+            <label for="last">Last name</label>
+            <input type="text" id="last" name="last_name" style="width: 150px;">
         </div>
         <button id="button">Say hello!</button>
+        <div id="text">
     </div>
 </div>
 <script>
+    const firstName = document.getElementById('first');
+    const lastName = document.getElementById('last');
+    const full = document.querySelector('p');
+    const button = document.querySelector('button');
+    const text = document.getElementById('text');
 
+
+    button.addEventListener('click', function(){
+        const name = document.createElement('h1');
+        name.innerHTML = 'I love Pasta';
+        text.insertAdjacentElement('afterbegin', name;
+    });
+
+    function nameCreator(){
+        let first = firstName.value;
+        let last = lastName.value;
+        let fullName = `Hello ${first} ${last}!`;
+        if (fullName.length>1){
+            full.classList.remove("hidden")
+        } else{
+            full.classList.add("hidden")
+        }
+        full.textContent = fullName;
+    }
 </script>
 </body>
 </html>
