--- a/compositeToDo.html
+++ b/compositeToDo.html
@@ -8,8 +8,90 @@
 <body>
 <div class="container">
     <div class="content">
-
+        <div class="row">
+            <input type="text">
+            <button id="submit">Enter</button>
+        </div>
     </div>
+    <table>
+        <thead>
+        <tr>
+            <th>
+                Description
+            </th>
+            <th>
+
+            </th>
+        </tr>
+        </thead>
+        <tbody id="incomplete">
+
+        </tbody>
+    </table>
+
+    <p>-----------------------------</p>
+
+    <table>
+        <thead>
+        <tr>
+            <th>
+                Description
+            </th>
+            <th>
+
+            </th>
+        </tr>
+        </thead>
+        <tbody id="complete">
+
+        </tbody>
+    </table>
 </div>
+<script>
+    const item = document.querySelector('input');
+    const submitButton = document.getElementById('submit');
+    const incomplete = document.getElementById('incomplete');
+    const complete = document.getElementById('complete');
+
+    submitButton.addEventListener('click', function(){
+        let toDoItem = item.value;
+        addItemToIncompleteTable(toDoItem);
+        item.value = "";
+    })
+
+    function addItemToIncompleteTable(toDoItem){
+        let newRow = document.createElement('tr');
+        let descriptionTag = document.createElement('td');
+        descriptionTag.textContent = toDoItem;
+        newRow.appendChild(descriptionTag);
+        let actionTag = document.createElement('td');
+        let action = document.createElement('button');
+        action.textContent = "Mark Complete";
+        action.addEventListener('click', function(){
+            newRow.remove();
+            addItemToCompleteTable(toDoItem);
+        })
+        actionTag.appendChild(action);
+        newRow.appendChild(actionTag);
+        incomplete.appendChild(newRow);
+    }
+
+    function addItemToCompleteTable(toDoItem){
+        let newRow = document.createElement('tr');
+        let descriptionTag = document.createElement('td');
+        descriptionTag.textContent = toDoItem;
+        newRow.appendChild(descriptionTag);
+        let actionTag = document.createElement('td');
+        let action = document.createElement('button');
+        action.textContent = "Mark Incomplete";
+        action.addEventListener('click', function(){
+            newRow.remove();
+            addItemToIncompleteTable(toDoItem);
+        })
+        actionTag.appendChild(action);
+        newRow.appendChild(actionTag);
+        complete.appendChild(newRow);
+    }
+</script>
 </body>
 </html>
