--- a/timersPractice.html
+++ b/timersPractice.html
@@ -17,9 +17,8 @@
 
     click.addEventListener('click', function(){
         setTimeout(function(){
-            console.log("I was clicked 3 second ago.")
+            click.remove();
         }, 3000);
-        // click.remove();
     })
 </script>
 </body>
