--- a/cardClickGame.html
+++ b/cardClickGame.html
@@ -30,11 +30,16 @@
         .content {
             width: 1400px;
         }
+        .score {
+            font-size: 24px;
+        }
     </style>
 </head>
 <body>
 <div class="container">
     <div class="content">
+        <div class="score">Score: 0
+        </div>
         <div class="cardList">
 
         </div>
