22 commit, finished card click game.

--- a/cardClickGame.html
+++ b/cardClickGame.html
@@ -33,6 +33,23 @@
         .score {
             font-size: 24px;
         }
+        .badCard {
+            width:300px;
+            height: 400px;
+            border-radius:12px;
+            display:flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 24px;
+            color:white;
+        }
+        .badActive{
+            background-color: darkred;
+        }
+        .badInActive{
+            background-color: red;
+            color:black;
+        }
     </style>
 </head>
 <body>
