23 commit, added a win condition.

--- a/cardClickGame.html
+++ b/cardClickGame.html
@@ -21,10 +21,10 @@
             color:white;
         }
         .active{
-            background-color: sandybrown;
+            background-color: blue;
         }
         .inactive{
-            background-color: gold;
+            background-color: green;
             color:black;
         }
         .content {
@@ -49,6 +49,20 @@
         .badInActive{
             background-color: red;
             color:black;
+        }
+        .goldCard{
+            width:300px;
+            height: 400px;
+            border-radius:12px;
+            display:flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 24px;
+            color: black;
+        }
+        .goldActive{
+            background-color:gold;
+            color: black;
         }
     </style>
 </head>
